# json-joy-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CORE_PARITY_MATRIX.md  Cargo.toml  IMPLEMENTATION_INVENTORY.md  Makefile  PARITY_FILE_CHECKLIST.md  PORT_PLAN.md  README.md  TASKS.md  UPSTREAM_IMPLEMENTATION_REVIEW.md  justfile
crates/json-expression/: Cargo.toml
crates/json-expression/src/: codegen.rs  codegen_steps.rs  error.rs  eval_ctx.rs  evaluate.rs  lib.rs  types.rs  util.rs  vars.rs
crates/json-expression/src/operators/: arithmetic.rs  array.rs  binary.rs  bitwise.rs  branching.rs  comparison.rs  container.rs  input.rs  logical.rs  mod.rs  object.rs  patch.rs  string.rs  type_ops.rs
crates/json-expression/tests/: evaluate.rs
crates/json-joy/: Cargo.toml
crates/json-joy-core/: Cargo.toml
crates/json-joy-core/src/: crdt_binary.rs  diff_runtime.rs  json_pointer.rs  less_db_compat.rs  lib.rs  model.rs  model_api.rs  model_runtime.rs  patch.rs  patch_builder.rs  patch_clock_codec.rs  patch_compact_binary_codec.rs  patch_compact_codec.rs  patch_compaction.rs  patch_log.rs  patch_verbose_codec.rs  schema.rs  util_diff.rs
crates/json-joy-core/src/codec_indexed_binary/: mod.rs  types.rs
crates/json-joy-core/src/codec_sidecar_binary/: decode.rs  encode.rs  mod.rs
crates/json-joy-core/src/diff_runtime/: array.rs  bin.rs  mod.rs  object.rs  scalar.rs  string.rs  vec.rs
crates/json-joy-core/src/model/: decode.rs  mod.rs
crates/json-joy-core/src/model_api/: events.rs  handles.rs  lifecycle.rs  mod.rs  ops.rs  path.rs  types.rs
crates/json-joy-core/src/model_runtime/: apply.rs  cbor.rs  decode.rs  encode.rs  mod.rs  query.rs  rga.rs  types.rs
crates/json-joy-core/src/patch/: decode.rs  encode.rs  mod.rs  types.rs
crates/json-joy-core/src/util_diff/: bin.rs  line.rs  str.rs
crates/json-joy-core/tests/: codec_indexed_binary_from_fixtures.rs  codec_sidecar_binary_from_fixtures.rs  compat_fixtures.rs  differential_codec_seeded.rs  differential_patch_codecs_seeded.rs  differential_patch_compaction_seeded.rs  differential_patch_schema_seeded.rs  differential_runtime_seeded.rs  differential_util_diff_seeded.rs  lessdb_model_manager_from_fixtures.rs  lessdb_patch_log_integration.rs  model_api_from_fixtures.rs  model_api_proxy_fanout_from_fixtures.rs  model_apply_replay_from_fixtures.rs  model_codec_from_fixtures.rs  model_decoder_malformed_matrix.rs  model_diff_dst_keys_from_fixtures.rs  model_diff_parity_from_fixtures.rs  model_encode_from_canonical_fixtures.rs  model_lifecycle_from_fixtures.rs  patch_alt_codecs_from_fixtures.rs  patch_codec_from_fixtures.rs  patch_compaction_from_fixtures.rs  patch_encode_from_canonical_fixtures.rs  patch_log_tests.rs  patch_schema_from_fixtures.rs  property_codec_roundtrip_invariants.rs  property_model_api_event_convergence.rs  property_replay_idempotence.rs  suite_coverage_inventory.rs  upstream_port_build_con_view_matrix.rs  upstream_port_codec_indexed_binary_matrix.rs  upstream_port_codec_sidecar_binary_matrix.rs  upstream_port_diff_any_matrix.rs  upstream_port_diff_matrix.rs  upstream_port_diff_native_support_matrix.rs  upstream_port_diff_nonempty_recursive_matrix.rs  upstream_port_diff_nonempty_scalar_matrix.rs  upstream_port_diff_runtime_stateful_matrix.rs  upstream_port_diff_server_clock_matrix.rs  (+26 more)
crates/json-joy-ffi/: Cargo.toml
crates/json-joy-ffi/src/: json_joy.udl  lib.rs
crates/json-joy-json-path/: Cargo.toml
crates/json-joy-json-path/src/: ast.rs  eval.rs  lib.rs  parser.rs  types.rs  util.rs
crates/json-joy-json-path/tests/: upstream_port_json_path_descendant_matrix.rs  upstream_port_json_path_exec_matrix.rs  upstream_port_json_path_expression_inventory.rs  upstream_port_json_path_matrix.rs  upstream_port_json_path_parser_matrix.rs  upstream_port_json_path_util_matrix.rs
crates/json-joy-json-pointer/: Cargo.toml
crates/json-joy-json-pointer/src/: find.rs  get.rs  index.rs  lib.rs  types.rs  util.rs  validate.rs
crates/json-joy-json-pointer/src/__bench__/: find.rs  parseJsonPointer.rs
crates/json-joy-json-pointer/src/__demos__/: json-pointer.rs
crates/json-joy-json-pointer/src/__tests__/: find.spec.rs  get.spec.rs  testFindRef.rs  util.escapeComponent.spec.rs  util.formatJsonPointer.spec.rs  util.isChild.spec.rs  util.parent.spec.rs  util.parseJsonPointer.spec.rs  util.unescapeComponent.spec.rs
crates/json-joy-json-pointer/src/codegen/: find.rs  findRef.rs  index.rs  mod.rs
crates/json-joy-json-pointer/src/findByPointer/: index.rs  mod.rs  v1.rs  v2.rs  v3.rs  v4.rs  v5.rs  v6.rs
crates/json-joy-json-pointer/tests/: find_by_pointer_edge_cases.rs  numeric_path.rs  upstream_port_json_pointer_matrix.rs
crates/json-joy/examples/: perf.rs
crates/json-joy/src/: lib.rs
crates/json-joy/src/json_cli/: mod.rs
crates/json-joy/src/json_crdt/: constants.rs  draft.rs  equal.rs  extensions.rs  json_patch_apply.rs  log.rs  mod.rs  partial_edit.rs  schema.rs
crates/json-joy/src/json_crdt_diff/: mod.rs
crates/json-joy/src/json_crdt_extensions/: mod.rs
crates/json-joy/src/json_crdt_patch/: batch.rs  compaction.rs  constants.rs  enums.rs  mod.rs  operations.rs  patch.rs  patch_builder.rs  schema.rs
crates/json-joy/src/json_crdt_peritext_ui/: mod.rs
crates/json-joy/src/json_hash/: hash.rs  mod.rs  struct_hash.rs  struct_hash_crdt.rs  struct_hash_schema.rs
crates/json-joy/src/json_ml/: mod.rs
crates/json-joy/tests/: compat_fixtures.rs  compat_inventory.rs  upstream_port_diff_workflows.rs  upstream_port_model_api_proxy_fanout_workflow.rs  upstream_port_model_api_workflow.rs
crates/util/: Cargo.toml
crates/util/src/: fuzzer.rs  has_own_property.rs  is_empty.rs  lazy_function.rs  lib.rs  obj_key_cmp.rs  types.rs
(+1269 files in other folders)
