[workspace]
resolver = "2"

members = [
  "crates/base64",
  "crates/buffers",
  "crates/codegen",
  "crates/json-joy-core",
  "crates/json-joy-ffi",
  "crates/json-joy-json-pack",
  "crates/json-joy-json-pointer",
  "crates/json-joy-wasm",
  "crates/util",
  "tools/embedded-uniffi-bindgen",
]

default-members = [
  "crates/base64",
  "crates/buffers",
  "crates/codegen",
  "crates/json-joy-core",
  "crates/json-joy-ffi",
  "crates/json-joy-json-pack",
  "crates/json-joy-json-pointer",
  "crates/json-joy-wasm",
  "crates/util",
  "tools/embedded-uniffi-bindgen",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/nicoth-in/json-joy-rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
