[package]
name = "json-joy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust port of json-joy — CRDT document model, patch protocol, diff, and utilities"

[dependencies]
json-joy-buffers = { path = "../buffers" }
json-joy-json-pack = { path = "../json-joy-json-pack" }
json-joy-util = { path = "../util" }
json-joy-json-type = { path = "../json-joy-json-type" }
json-joy-json-pointer = { path = "../json-joy-json-pointer" }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "2.0"
base64 = "0.22"

[dev-dependencies]
